Fixed font sizes and overall content spacing on mobile

--- a/css/skowak.css
+++ b/css/skowak.css
@@ -86,6 +86,10 @@ p, strong {
   padding: 2rem 0 4rem 0;
 }
 
+.column-content {
+  margin-bottom: 1.5rem;
+}
+
 @media ( max-width: 600px ) {
   .viewport-left {
     display: none;
@@ -97,11 +101,11 @@ p, strong {
   }
 
   h1 {
-    font-size: 2rem;
+    font-size: 1.8rem;
   }
 
   h2 {
-    /* font-size: 2.3rem; */
+    font-size: 2.6rem;
   }
 
   p, strong {
@@ -117,6 +121,7 @@ p, strong {
 
   .vision .wrapper {
     width: 100%;
+    padding: 6rem 0;
   }
 
   .light-leak-up, .light-leak-down {
